# craftgate-python-client

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml  setup.py
.github/workflows/: craftgate-build.yml  craftgate-release.yml
craftgate/: __init__.py
craftgate/adapter/: __init__.py  bank_account_tracking_adapter.py  base_adapter.py  bkm_express_payment_adapter.py  file_reporting_adapter.py  fraud_adapter.py  hook_adapter.py  installment_adapter.py  juzdan_payment_adapter.py  masterpass_payment_adapter.py  meal_voucher_card_tokenization_adapter.py  merchant_adapter.py  merchant_apm_adapter.py  onboarding_adapter.py  pay_by_link_adapter.py  payment_adapter.py  payment_reporting_adapter.py  payment_token_adapter.py  settlement_adapter.py  settlement_reporting_adapter.py  wallet_adapter.py
craftgate/model/: __init__.py  (+48 more)
scripts/: check_init_files.py  update_version.py
tests/: meal_voucher_card_tokenization_sample.py  test_bank_account_tracking_sample.py  test_bkm_express_payment_sample.py  test_bnpl_payment_sample.py  test_file_reporting_sample.py  test_fraud_adapter.py  test_hook_sample.py  test_installment_sample.py  test_instant_transfer_payment_sample.py  test_juzdan_payment_sample.py  test_masterpass_payment_sample.py  test_meal_voucher_card_tokenization_sample.py  test_merchant_apm_sample.py  test_merchant_sample.py  test_onboarding_sample.py  test_pay_by_link_sample.py  test_payment_reporting_sample.py  test_payment_sample.py  test_payment_token_sample.py  test_settlement_reporting_sample.py  test_settlement_sample.py  test_wallet_sample.py
(+218 files in other folders)
